<resources>
    <string name="app_name">XIM</string>
    <string name="register_information">点击上面的"注册"按钮，即表示你同意《XIM 即时聊天软件许可即服务协议》和《XIM 隐私保护指引》</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm">确认密码</string>
    <string name="input_username">请输入您的用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="bar_top_text">XIM 聊</string>
    <string name="contacts">通讯录</string>
    <string name="me">我</string>
    <string name="discover">发现</string>
    <string name="recommended_friends">新的朋友</string>
    <string name="group_chats">群聊</string>
    <string name="official_accounts">订阅号</string>
    <string name="chat">微信</string>
    <string name="no_msg">暂时没有新消息</string>
    <string name="wechat_id">微信号</string>
    <string name="my_posts">相册</string>
    <string name="collection">收藏</string>
    <string name="wallet">钱包</string>
    <string name="card_bag">卡包</string>
    <string name="expression2">表情</string>
    <string name="settings">设置</string>
    <string name="moments">朋友圈</string>
    <string name="scan">扫一扫</string>
    <string name="shake2">摇一摇</string>
    <string name="people_nearby">附近的人</string>
    <string name="drift_bottle">漂流瓶</string>
    <string name="shopping">购物</string>
    <string name="games">游戏</string>
    <string name="search">搜索</string>
    <string name="countries_and_areas">国家和地区</string>

    <string name="action_settings">Settings</string>

    <string name="menu_groupchat">发起群聊</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_qrcode">扫一扫</string>
    <string name="menu_money">微信支付</string>

</resources>
