<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#070708"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/btn_login_back"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_back_selector"
            android:layout_width="30dp"
            android:layout_height="30dp" />
    </LinearLayout>

    <TextView
        android:padding="15dp"
        android:layout_below="@id/btn_login_back"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center_vertical"
        android:text="账号密码登陆"
        android:textColor="#000000"
        android:textSize="30sp"
        android:id="@+id/textView2" />

    <LinearLayout
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="25sp"
                android:text="@string/username"
                android:textColor="#000000"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:hint="@string/input_username" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="25sp"
                android:text="@string/password"
                android:textColor="#000000"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPassword"
                android:hint="@string/input_password" />
        </LinearLayout>
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/btn_login"
            android:background="@drawable/shape_radius_rectangle_greed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/login"/>
    </LinearLayout>
</LinearLayout>