<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#070708"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/btn_register_back"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_back_selector"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:gravity="center_vertical"
            android:textSize="25sp"
            android:text="XIM 账号注册"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="25sp"
                android:text="@string/username"
                android:textColor="#000000"
                android:layout_width="110dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:hint="例如：张三" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="25sp"
                android:text="@string/password"
                android:textColor="#000000"
                android:layout_width="110dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="6~16位字母、数字组合"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="25sp"
                android:text="@string/confirm"
                android:textColor="#000000"
                android:layout_width="110dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="再次输入密码进行确认"
                android:inputType="textPassword"
                android:layout_weight="1" />
        </LinearLayout>
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/btn_confirm_register"
            android:background="@drawable/shape_radius_rectangle_greed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/register"/>
        <TextView
            android:text="@string/register_information"
            android:layout_marginTop="15dp"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>