<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />

            <TextView
                android:id="@+id/txt_album"
                style="@style/TxtTitle"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_item_selector"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"

                android:drawableRight="@drawable/right"
                android:text="@string/my_posts" />

            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />

            <TextView
                android:id="@+id/txt_collect"
                style="@style/TxtTitle"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_item_selector"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:drawablePadding="10dp"

                android:drawableRight="@drawable/right"
                android:text="@string/collection" />
            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />

            <TextView
                android:id="@+id/txt_money"
                style="@style/TxtTitle"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_item_selector"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:drawablePadding="10dp"

                android:drawableRight="@drawable/right"
                android:text="@string/wallet" />
            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />
            <TextView
                android:id="@+id/txt_card"
                style="@style/TxtTitle"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_item_selector"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:drawablePadding="10dp"

                android:drawableRight="@drawable/right"
                android:text="@string/card_bag" />
            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />


            <TextView
                android:id="@+id/txt_smail"
                style="@style/TxtTitle"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_item_selector"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"

                android:drawableRight="@drawable/right"

                android:text="@string/expression2" />
            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />

        </LinearLayout>
</LinearLayout>